[package]
name = "clipboard-saver"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["deeean <margintop3498@icloud.com>"]
description = "A simple clipboard saver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4" }
cocoa = "0.24.1"
image = "0.24.5"
uuid = { version = "1.2.2", features = ["v4"] }

[[bin]]
name = "clipboard-saver"